crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__statements__for_loop_2.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/statements.rs
assertion_line: 21
expression: "goto_definition(r#\"\n%! main.sp\nvoid foo() {\n    for (int bar; bar < 10; bar++) {\n        bar = 5;\n         |\n         ^\n    }\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 11
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 13
      },
      "end": {
        "line": 1,
        "character": 16
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 13
      },
      "end": {
        "line": 1,
        "character": 16
      }
    }
  }
]
