crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__statements__for_loop_4.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/statements.rs
assertion_line: 52
expression: "goto_definition(r#\"\n%! main.sp\nvoid foo() {\n    int bar, baz;\n    for (bar = 0, baz = 0; bar < 10; bar++) {\n          |\n          ^\n    }\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 9
      },
      "end": {
        "line": 2,
        "character": 12
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 8
      },
      "end": {
        "line": 1,
        "character": 11
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 8
      },
      "end": {
        "line": 1,
        "character": 11
      }
    }
  }
]
